--- a/BookSaleProject/src/main/resources/templates/mainPage.html
+++ b/BookSaleProject/src/main/resources/templates/mainPage.html
@@ -16,7 +16,7 @@
         <div class="row" style="background-color: aquamarine;padding: 0px;">
             <div class="col-sm-1"></div>
             <div class="col-sm-3" style="text-align-last: left;">
-                <a href="/MuaBanSach/mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
+                <a href="mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
             </div>
             <div class="col-sm-4" style="padding-top: 10px;">
                 <form action="" >
@@ -99,7 +99,7 @@
           <label for="" style="background-color:aquamarine; text-align: center; width: 15%"><p style="font-size: 150%; color: black;">Sách mới</p></label>
         </div>
         <div class="col-sm-3" >
-          <button style="background-color: azure;"><a href="SachMoi/sachMoi.html" style="font-size: 150%; color: black;">Xem tất cả</a></button>
+          <button style="background-color: azure;"><a href="sachMoi.html" style="font-size: 150%; color: black;">Xem tất cả</a></button>
         </div>
       </div>
       <div class="row">
