--- a/BookSaleProject/src/main/resources/templates/sachMoi.html
+++ b/BookSaleProject/src/main/resources/templates/sachMoi.html
@@ -18,7 +18,7 @@
     <div class="row" style="background-color: aquamarine;padding: 0px;">
         <div class="col-sm-1"></div>
         <div class="col-sm-3" style="text-align-last: left;">
-            <a href="/MuaBanSach/mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
+            <a href="mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
         </div>
         <div class="col-sm-4" style="padding-top: 10px;">
             <form action="" >
