--- a/BookSaleProject/src/main/resources/templates/mainPage.html
+++ b/BookSaleProject/src/main/resources/templates/mainPage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Mua bán sách</title>
 </head>
@@ -29,14 +29,23 @@
                 </form>
             </div>
             <div class="col-sm-4" style="padding: 10px;">
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tài khoản của bạn
-                    <span class="caret"></span></button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đăng nhập</a></li>
-                    </ul>
-                  </div>
+              <div class="dropdown" style="display: inline;">
+                <button type="button" style="background-color: aquamarine;border:aquamarine;color: black;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                  <strong style="color: black;">Tài khoản của bạn</strong>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="Login.html">Đăng nhập</a></li>
+                  <li><a class="dropdown-item" href="Register.html">Đăng kí</a></li>
+                </ul>
+              </div>
+              <div class="dropdown" style="display: inline;">
+                <button type="button" style="background-color: aquamarine; border: aquamarine;color: black;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                  <strong style="color: black;">Giỏ hàng</strong>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Xem giỏ hàng</a></li>
+                </ul>
+              </div>
             </div>
           </div>
     </header>
@@ -56,15 +65,16 @@
       </div>
       <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-2" style="padding-top: 0.5%;">
-          <div class="dropdown" style="padding-top: 2%;">
-            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><strong>Nổi bật</strong>
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách bán chạy</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách mới</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách phát hành</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách giảm giá</a></li>
+        <div class="col-sm-2">
+          <div class="dropdown">
+            <button type="button" style="background-color: white; color: black;border: white; padding-top: 10%;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+              <strong style="color: black;">Nổi bật</strong>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="sachBanChay.html">Sách bán chạy</a></li>
+              <li><a class="dropdown-item" href="sachMoi.html">Sách mới</a></li>
+              <li><a class="dropdown-item" href="sapPhatHanh.html">Sắp phát hành</a></li>
+              <li><a class="dropdown-item" href="#">Sách giảm giá</a></li>
             </ul>
           </div>
           <button style="padding-top: 10%;"><a href="">Truyện Tranh-Comic</a></button><br>
@@ -77,18 +87,48 @@
           <button style="padding-top: 10%;"><a href="">Light Novel</a></button><br>
           <button style="padding-top: 10%;"><a href="">Văn Phòng Phẩm - Quà Tặng</a></button><br>
           <div class="dropdown" style="padding-top: 10%;">
-            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><strong>Công ty phát hành</strong>
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">IPM</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Thái Hà</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kim Đồng</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">AZ Việt Nam</a></li>
+            <button type="button" style="background-color: white; color: black;border: white;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+              <strong style="color: black;">Công ty phát hành</strong>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">IPM</a></li>
+              <li><a class="dropdown-item" href="#">AZ Việt Nam</a></li>
+              <li><a class="dropdown-item" href="#">Sky Book</a></li>
+              <li><a class="dropdown-item" href="#">Kim Đồng</a></li>
             </ul>
           </div>
         </div>
         <div class="col-sm-6" style="padding-top: 0.5%;">
-          <img src="https://th.bing.com/th/id/R.b73811fc60c423a9ebc8eaa3855d0a0d?rik=AixRAuR5blPgLA&pid=ImgRaw&r=0" alt="Hình ảnh" style="width: fit-content; height:fit-content;">
+          <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            </div>
+            
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://th.bing.com/th/id/R.3caab02d13af955ad57305dcb4b71d5c?rik=jAjw5w78vW3I9g&pid=ImgRaw&r=0" alt="Los Angeles" class="d-block" style="width:100%">
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.clays.co.uk/wp-content/uploads/hero-books.jpg" alt="Chicago" class="d-block" style="width:100%">
+              </div>
+              <div class="carousel-item">
+                <img src="https://odishalinks.com/wp-content/uploads/2022/04/old-book-flying-letters-magic-light-background-bookshelf-library-ancient-books-as-symbol-knowledge-history-218640948.jpg" alt="New York" class="d-block" style="width:100%">
+              </div>
+            </div>
+            
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
         </div>
         <div class="col-sm-3"></div>
       </div>
