--- a/BookSaleProject/src/main/resources/templates/mainPage.html
+++ b/BookSaleProject/src/main/resources/templates/mainPage.html
@@ -19,13 +19,8 @@
                 <a href="mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
             </div>
             <div class="col-sm-4" style="padding-top: 10px;">
-                <form action="" >
-                    <input type="text" placeholder="Tìm kiếm" style="width: 60%;">
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                      </svg>
-                    </button>
+                <form class="form-inline mt-2 mt-md-0" method="get" action="search.html">
+                     <input class="form-control mr-sm-2" type="search" placeholder="Bạn muốn tìm gì ?" aria-label="Search">
                 </form>
             </div>
             <div class="col-sm-4" style="padding: 10px;">
@@ -34,8 +29,10 @@
                   <strong style="color: black;">Tài khoản của bạn</strong>
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Login.html">Đăng nhập</a></li>
+                 <!-- <li><a class="dropdown-item" href="Login.html">Đăng nhập</a></li>
                   <li><a class="dropdown-item" href="Register.html">Đăng kí</a></li>
+                  -->
+                    <li><a class="dropdown-item" href="login.html">Đăng nhập</a></li>
                 </ul>
               </div>
               <div class="dropdown" style="display: inline;">
