--- a/BookSaleProject/src/main/resources/templates/search.html
+++ b/BookSaleProject/src/main/resources/templates/search.html
@@ -2,9 +2,15 @@
 <html lang="vi" class="h-100">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nền tảng - Kiến thức cơ bản về WEB | Bảng tin</title>
 
     <!-- Bootstrap CSS -->
@@ -24,42 +30,47 @@
                 <a href="mainPage.html" style="color: black; font-size: x-large;font-weight: bolder;font-size: 40px;">MuaBanSach.vn</a>
             </div>
             <div class="col-sm-4" style="padding-top: 10px;">
-                <form action="" >
-                    <input type="text" placeholder="Tìm kiếm" style="width: 60%;">
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                        </svg>
-                    </button>
+                <form class="form-inline mt-2 mt-md-0" method="get" action="search.html">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Bạn muốn tìm gì ?" aria-label="Search">
                 </form>
             </div>
             <div class="col-sm-4" style="padding: 10px;">
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tài khoản của bạn
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đăng nhập</a></li>
+                <div class="dropdown" style="display: inline;">
+                    <button type="button" style="background-color: aquamarine;border:aquamarine;color: black;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                        <strong style="color: black;">Tài khoản của bạn</strong>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <!-- <li><a class="dropdown-item" href="Login.html">Đăng nhập</a></li>
+                         <li><a class="dropdown-item" href="Register.html">Đăng kí</a></li>
+                         -->
+                        <li><a class="dropdown-item" href="login.html">Đăng nhập</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown" style="display: inline;">
+                    <button type="button" style="background-color: aquamarine; border: aquamarine;color: black;" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                        <strong style="color: black;">Giỏ hàng</strong>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Xem giỏ hàng</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
-<div class="row">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-3" style="padding-top: 0.5%;">
-        <i class="fa-solid fa-list" style="font-size: 110%;"></i>
-        <p style="display: inline;font-size: 110%; padding-bottom: 10px; ">DANH MỤC SẢN PHẨM</p>
-    </div>
-    <div class="col-sm-4">
+    <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3" style="padding-top: 0.5%;">
+            <i class="fa-solid fa-list" style="font-size: 110%;"></i>
+            <p style="display: inline;font-size: 110%; padding-bottom: 10px; ">DANH MỤC SẢN PHẨM</p>
+        </div>
+        <div class="col-sm-4">
 
+        </div>
+        <div class="col-sm-4" style="padding-top: 0.5%;">
+            <p style="display: inline;">HotLine:</p>
+            <p style="color: green; display: inline;">0938 424 289</p>
+        </div>
     </div>
-    <div class="col-sm-4" style="padding-top: 0.5%;">
-        <p style="display: inline;">HotLine:</p>
-        <p style="color: green; display: inline;">0938 424 289</p>
-    </div>
-</div>
-
     <main role="main">
         <!-- Block content - Đục lỗ trên giao diện bố cục chung, đặt tên là `content` -->
         <div class="container mt-4">
