--- a/BookSaleProject/src/main/resources/templates/mainPage.html
+++ b/BookSaleProject/src/main/resources/templates/mainPage.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="topnav.css">
+    <script src="dungchung.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
     <title>Mua bán sách</title>
 </head>
 <body>
+    <script> addTopNav(); </script>
     <header>
         <div class="row" style="background-color: aquamarine;padding: 0px;">
             <div class="col-sm-1"></div>
@@ -29,9 +33,6 @@
                   <strong style="color: black;">Tài khoản của bạn</strong>
                 </button>
                 <ul class="dropdown-menu">
-                 <!-- <li><a class="dropdown-item" href="Login.html">Đăng nhập</a></li>
-                  <li><a class="dropdown-item" href="Register.html">Đăng kí</a></li>
-                  -->
                     <li><a class="dropdown-item" href="login.html">Đăng nhập</a></li>
                 </ul>
               </div>
@@ -57,7 +58,7 @@
         </div>
         <div class="col-sm-4" style="padding-top: 0.5%;">
             <p style="display: inline;">HotLine:</p>
-            <p style="color: green; display: inline;">0938 424 289</p>
+            <p style="color: green; display: inline;">0334 622 902</p>
         </div>
       </div>
       <div class="row">
