--- a/BookSaleProject/src/main/resources/templates/productDetail.html
+++ b/BookSaleProject/src/main/resources/templates/productDetail.html
@@ -20,86 +20,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
+    <script th:src="@{/js/reUse.js}"></script>
     <title>Mua bán sách</title>
 </head>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        /* Thiết lập chiều cao tối thiểu của body là 100% của viewport */
-        display: flex;
-        flex-direction: column;
-    }
 
-    main {
-        flex: 1;
-        /* Đảm bảo main sẽ mở rộng để lấp đầy không gian còn trống giữa header và footer */
-    }
-
-    footer {
-        padding-bottom: 0px;
-        flex-shrink: 0;
-        /* Ngăn footer bị co lại khi nội dung ít */
-    }
-
-    iframe {
-        width: 100%;
-        height: 620px;
-        border: none;
-        /* Loại bỏ đường viền của iframe */
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
-
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    .dropdown-content a:hover {
-        background-color: #f1f1f1;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-        opacity: 1;
-    }
-</style>
-<script>
-    function showSearchBar() {
-        var searchBar = document.getElementById("search-bar");
-        var displayButton = document.getElementById("dropbtn");
-        var all = document.getElementById("1");
-        if (searchBar.style.display === "none") {
-            searchBar.style.display = "block";
-            displayButton.style.display = "none"
-            all.style.display = "none"
-        }
-    }
-    function cancelBar() {
-        var searchBar = document.getElementById("search-bar");
-        if (searchBar.style.display === "block") {
-            searchBar.style.display = "none";
-            displayButton.style.display = "block"
-            all.style.display = "block"
-        }
-    }
-</script>
 <body>
     <header th:insert="~{header :: header}"></header>
-    <h1>Cak</h1>
+
+    
+
     <footer th:insert="~{footer :: footer}"></footer>
 </body>
 </html>
