--- a/BookSaleProject/src/main/resources/templates/getAllBookForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getAllBookForCus.html
@@ -27,8 +27,9 @@
 
 <body>
     <header th:insert="~{header :: header}"></header>
+    
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-2">
             <div style="padding-left: 4%; padding-top: 4%; width: fit-content;">
                 <div>
                     <i class="fa-solid fa-list" style="font-size: 20px;"></i>
@@ -82,26 +83,36 @@
                 <!-- Giải thuật duyệt và render Danh sách sản phẩm theo dòng, cột của Bootstrap -->
             </div>
         </div>
-        <div class="col-md-9" style="padding-top: 2%;">
+        <div class="col-md-9">
             <div class="row">
-                <div th:each="book, iterStat : ${bookList}" class="col-sm-4">
-                    <div style="padding-top: 2%;">
-                        <img th:src="@{'/images/'+${book.img}}" style="width: 300px;height: 300px;">
-                           <form th:action="@{/book/getBookById}" th:method="get">
-                            <input type="hidden" th:value="${book.id}" name="id">
-                            <button type="submit" th:text="${book.name}"></button>
-                            <p th:text="${book.price}"></p>
-                            <p th:text="${book.author}"></p>
-                           </form>
-                    </div>
+                <div th:each="book, iterStat : ${bookList}" class="col-sm-3" style="padding-top: 20px;">
+                    <form th:action="@{/book/getBookById}" th:method="get">
+                        <input type="hidden" th:value="${book.id}" name="id">
+                        <div class="card" style="width:300px;" >
+                            <div style="height: 400px; overflow: hidden;">
+                                <img class="card-img-top" th:src="@{'/images/'+${book.img}}" style="width: 100%; height: 100%; object-fit: cover;">
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title" th:text="${book.name}"></h4>
+                                <p class="card-text" th:text="${book.price}"></p>
+                                <button type="submit" class="btn btn-primary">Xem thông tin</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-
             </div>
         </div>
-
-
-
-        <footer th:insert="~{footer :: footer}"></footer>
+    </div>
+        <div>
+            <ul class="pagination justify-content-center" style="padding-top: 20px;">
+                <li class="page-item"><a class="page-link" th:href="@{/book/getAllBook/__${Previous}__}">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="javascript:void(0);" th:href="@{/book/getAllBook/1}">1</a></li>
+                    <li class="page-item"><a class="page-link" href="javascript:void(0);" th:href="@{/book/getAllBook/2}">2</a></li>
+                    <li class="page-item"><a class="page-link" href="javascript:void(0);" th:href="@{/book/getAllBook/3}">3</a></li>
+                <li class="page-item"><a class="page-link" th:href="@{/book/getAllBook/__${Next}__}">Next</a></li>
+              </ul>
+        </div>
+    <footer th:insert="~{footer :: footer}"></footer>
 </body>
 
 </html>
