--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -64,7 +64,7 @@
                     <div class="col-sm-8 ">
                         <div class="row">
                             <div class="col-sm-5 " style="text-align: left;">
-                                <a href="#"
+                                <a th:href="@{/book/}"
                                     style="text-decoration: none; color: white;font-family: 'Courier New', Courier, monospace; font-size: xx-large;letter-spacing: 4px;">
                                     <i class="fa-solid fa-book-open"></i>ONLINE BOOKSALE </a>
                             </div>
