--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -3,11 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="topnav.css">
+    <script src="dungchung.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
+    <script th:src="@{/js/reUse.js}"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <a th:href="@{/book/getAllBook}">getAll</a>
+    <header th:insert="~{header :: header}"></header>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <div style="padding-left: 4%; padding-top: 4%; width: fit-content;">
+                <div>
+                    <i class="fa-solid fa-list" style="font-size: 20px;"></i>
+                    <p style="display: inline;font-size: 20px; padding-bottom: 10px; ">DANH MỤC SẢN PHẨM</p>
+                </div>
+                <div>
+                    <div class="dropdown" style="width: fit-content; padding-top: 7px;">
+                        <a type="button"
+                            style="width: fit-content; background-color: white; color: black;border: white; padding-top: 10px;"
+                            class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                            <strong style="color: black;">Nổi bật</strong>
+                        </a>
+                        <ul class="dropdown-content">
+                            <li><a class="dropdown-item" href="sachBanChay.html">Sách bán chạy</a></li>
+                            <li><a class="dropdown-item" href="sachMoi.html">Sách mới</a></li>
+                            <li><a class="dropdown-item" href="sapPhatHanh.html">Sắp phát hành</a></li>
+                            <li><a class="dropdown-item" href="#">Sách giảm giá</a></li>
+                        </ul>
+                    </div>
+                    <button style="padding-top: 20px;"><a href="">Truyện Tranh-Comic</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Văn học nước ngoài</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Sale cuối năm 2022</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Sách văn học</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Truyện tranh BL</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Sách kĩ năng sống</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Sách thiếu nhi</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Light Novel</a></button>
+                    <br>
+                    <button style="padding-top: 20px;"><a href="">Văn Phòng Phẩm - Quà Tặng</a></button>
+                    <br>
+                    <div class="dropdown" style="padding-top: 10px; width: fit-content;">
+                        <a type="button" style=" background-color: white; color: black;border: white;"
+                            class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                            <strong style="color: black;">Công ty phát hành</strong>
+                        </a>
+                        <ul class="dropdown-content">
+                            <li><a class="dropdown-item" href="#">IPM</a></li>
+                            <li><a class="dropdown-item" href="#">AZ Việt Nam</a></li>
+                            <li><a class="dropdown-item" href="#">Sky Book</a></li>
+                            <li><a class="dropdown-item" href="#">Kim Đồng</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Giải thuật duyệt và render Danh sách sản phẩm theo dòng, cột của Bootstrap -->
+            </div>
+        </div>
+        <div class="col-md-6" style="padding-top: 0.5%;border: solid;">
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+                <!-- Indicators/dots -->
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active" style="background-color: black;"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="1" style="background-color: black;"></button>
+                </div>
+                
+                <!-- The slideshow/carousel -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active" style="height: 400px; overflow: hidden;">
+                    <img th:src="@{'/images/'+ banner1.jpg}" class="d-block" style="height: 397px;object-fit: cover;">
+                  </div>
+                  <div class="carousel-item" style="height: 400px; overflow: hidden;">
+                    <img th:src="@{'/images/'+ banner2.jpg}" class="d-block" style="height: 397px;object-fit: cover;">
+                  </div>
+                </div>
+                <!-- Left and right controls/icons -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev" style="background-color: black;">
+                  <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next" style="background-color: black;">
+                  <span class="carousel-control-next-icon"></span>
+                </button>
+              </div>
+        </div>
+    </div>
+
+    <button><a th:href="@{/book/getAll}">quek</a></button>
+
+    <footer th:insert="~{footer :: footer}"></footer>
 </body>
 </html>
