--- a/BookSaleProject/src/main/resources/templates/productDetail.html
+++ b/BookSaleProject/src/main/resources/templates/productDetail.html
@@ -33,7 +33,7 @@
         <div class="row" style="padding-top: 20px;">
             <div class="col-sm-1"></div>
             <div class="col-sm-3">
-                <img th:src="@{'/images/'+${book.img}}" width="470px">
+                <img th:src="@{'/images/'+${book.img}}" width="470px" class="rounded">
             </div>
             <div class="col-sm-6">
                 <div>
@@ -75,13 +75,56 @@
                         <strong style="min-width: 137px;">Nội dung:</strong>
                         <p th:text="${book.detail}"></p>
                     </div>
-                    
-                    
-                    
+
+
+                    <div style="padding-top: 20px;">
+                        <hr>
+                        <div class="col-sm-3" style="padding-top: 20px;padding-bottom: 20px;">
+                            <strong style="min-width: 137px;display: inline;">Danh mục:</strong>
+                            <span th:text="${booktype.name}" style="padding-left: 30px;display: inline;"></span>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </div>
         </div>
     </div>
+
+    <div style="padding-top: 20px;">
+        <hr>
+        <div class="row">
+            <div class="col-sm-5"></div>
+            <div class="col-sm-7" style="padding-top: 20px;">
+            <strong class="h4">SẢN PHẨM LIÊN QUAN</strong>
+        </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <div class="row">
+                    <div th:each="book, iterStat : ${bookList}" class="col-sm-3" style="padding-top: 20px;">
+                        <form th:action="@{/book/getBookById}" th:method="get">
+                            <input type="hidden" th:value="${book.id}" name="id">
+                            <div class="card" style="width:300px;" th:if="${book.SL > 0}" >
+                                <div style="height: 400px; overflow: hidden;">
+                                    <img class="card-img-top" th:src="@{'/images/'+${book.img}}" style="width: 100%; height: 100%; object-fit: cover;">
+                                </div>
+                                <div class="card-body">
+                                    <h4 class="card-title" th:text="${book.name}"></h4>
+                                    <p class="card-text" th:text="${book.price}"></p>
+                                    <button type="submit" class="btn btn-primary">Xem thông tin</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+
     <footer th:insert="~{footer :: footer}"></footer>
 </body>
 </html>
