--- a/BookSaleProject/src/main/resources/templates/getAllBookForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getAllBookForCus.html
@@ -9,8 +9,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="topnav.css">
-    <script src="dungchung.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +25,7 @@
 
 <body>
     <header th:insert="~{header :: header}"></header>
-    
+
     <div class="row">
         <div class="col-sm-2">
             <div style="padding-left: 4%; padding-top: 4%; width: fit-content;">
@@ -85,17 +83,26 @@
         </div>
         <div class="col-md-9">
             <div class="row">
-                <div th:each="book, iterStat : ${bookList}" class="col-sm-3" style="padding-top: 20px;">
+                <div th:each="book : ${BookRate}" class="col-sm-4" style="padding-top: 20px;">
                     <form th:action="@{/book/getBookById}" th:method="get">
-                        <input type="hidden" th:value="${book.id}" name="id">
-                        <div class="card" style="width:300px;" th:if="${book.SL > 0}" >
+                        <input type="hidden" th:value="${book.key.id}" name="id">
+                        <div class="card" style="width:300px;">
                             <div style="height: 400px; overflow: hidden;">
-                                <img class="card-img-top" th:src="@{'/images/'+${book.img}}" style="width: 100%; height: 100%; object-fit: cover;">
+                                <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
+                                    style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title" th:text="${book.name}"></h4>
-                                <p class="card-text" th:text="${book.price}"></p>
-                                <button type="submit" class="btn btn-primary">Xem thông tin</button>
+                                <h4 class="card-title" th:text="${book.key.name}"></h4>
+                                <p class="card-text" th:text="${book.key.price}"></p>
+                                <div>
+                                    <button type="submit"
+                                        style="border: none; background-color: white; font-weight: bolder;display: inline;">Xem
+                                        thông tin</button>
+                                    <a th:href="@{/book/getBookById}" style="display: inline; padding-right: 0px;">
+                                        <i class="fa-solid fa-cart-shopping" style="font-size: larger;"></i>
+                                    </a>
+                                </div>
+                                <p th:text="${book.value}"></p>
                             </div>
                         </div>
                     </form>
@@ -106,12 +113,15 @@
 
     <div>
         <ul class="pagination justify-content-center" style="padding-top: 20px;">
-            <li class="page-item" th:if="${currentPage > 1}"><a class="page-link" th:href="@{/book/getAllBook/__${Previous}__}">Trang trước</a></li>
-            <ul class="pagination justify-content-center" th:each="page, iterStat : ${NumOfPage}"> 
-                <li class="page-item"><a class="page-link" th:href="@{/book/getAllBook/__${page}__}" th:text="${page} "></a></li>
+            <li class="page-item" th:if="${currentPage > 1}"><a class="page-link"
+                    th:href="@{/book/getAllBook/__${Previous}__}">Trang trước</a></li>
+            <ul class="pagination justify-content-center" th:each="page, iterStat : ${NumOfPage}">
+                <li class="page-item"><a class="page-link" th:href="@{/book/getAllBook/__${page}__}"
+                        th:text="${page} "></a></li>
             </ul>
-            <li class="page-item" th:if="${NumOfPage.length > currentPage}"><a class="page-link" th:href="@{/book/getAllBook/__${Next}__}">Trang sau</a></li>
-            </ul>
+            <li class="page-item" th:if="${NumOfPage.length > currentPage}"><a class="page-link"
+                    th:href="@{/book/getAllBook/__${Next}__}">Trang sau</a></li>
+        </ul>
     </div>
     <footer th:insert="~{footer :: footer}"></footer>
 </body>
