--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -27,11 +27,11 @@
 <body>
     <header th:insert="~{header :: header}"></header>
 
-        <div style="padding-top: 40px; border: solid;">
+        <div style="padding-top: 40px;">
             <div id="demo" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active" style="background-color: black;"></button>
-                  <button type="button" data-bs-target="#demo" data-bs-slide-to="1" style="background-color: black;"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                  <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
