--- a/BookSaleProject/src/main/resources/templates/productDetail.html
+++ b/BookSaleProject/src/main/resources/templates/productDetail.html
@@ -39,8 +39,8 @@
                 <div>
                     <p class="h1" th:text="${book.name}"></p>
                 </div>
-                <p class="h5" th:text="${rate}" style="display: inline;color: yellow;"></p>
-                <i class="fa-solid fa-star" style="color: yellow;display: inline;font-size: larger;"></i>
+                <p class="h5" th:text="${rate}" style="display: inline;color: #FF9529;"></p>
+                <i class="fa-solid fa-star" style="color: #FF9529;display: inline;font-size: larger;"></i>
                 <div>
                     <p class="h2" th:text="${book.price}+' đ'" style="color: greenyellow;"> đ</p>
                 </div>
