--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -27,30 +27,103 @@
 <body>
     <header th:insert="~{header :: header}"></header>
 
-        <div style="padding-top: 40px;">
-            <div id="demo" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                  <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img th:src="@{'/images/'+ banner1.jpg}" class="d-block" style="width: 100%;">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{'/images/'+ banner2.jpg}" class="d-block" style="width: 100%;">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-                  <span class="carousel-control-next-icon"></span>
-                </button>
+    <div style="padding-top: 40px;">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img th:src="@{'/images/'+ banner1.jpg}" class="d-block" style="width: 100%;">
               </div>
-        </div>
+              <div class="carousel-item">
+                <img th:src="@{'/images/'+ banner2.jpg}" class="d-block" style="width: 100%;">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+      </div>
 
-    <button><a th:href="@{/book/getAllBook/1}">quek</a></button>
+      <div style="padding-top: 40px;">
+        <p class="h2" style="font-weight: bolder;text-align: center;">SÁCH MỚI</p>
+        <div class="row" style="padding-top: 20px;">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-8">
+            <div class="row">
+              <div th:each="book : ${newBookList}" class="col-sm-3" style="padding-top: 20px;">
+                <form th:action="@{/book/getBookById}" th:method="get">
+                    <input type="hidden" th:value="${book.key.id}" name="id">
+                    <div class="card" style="width:300px;">
+                        <div style="height: 400px; overflow: hidden;">
+                            <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
+                                style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;"></h4>
+                            <p class="card-text" th:text="${book.key.price}+'đ'" style="color: yellowgreen;"></p>
+                            <div>
+                                <button type="submit"
+                                    style="border: none; background-color: white; font-weight: bolder;display: inline;">Xem thông tin</button>
+                            </div>
+                            <div>
+                                <p class="h5" th:text="${book.value}" style="display: inline;color:#FF9529 ;"></p>
+                                <i class="fa-solid fa-star" style="color: #FF9529;display: inline;font-size: larger;"></i>
+                                <a th:href="@{/book/getBookById}" style="display: inline; padding-right: 0px;float: right;">
+                                    <i class="fa-solid fa-cart-shopping" style="font-size: x-large;"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div style="padding-top: 40px;">
+        <p class="h2" style="font-weight: bolder;text-align: center;">SÁCH ĐƯỢC YÊU THÍCH</p>
+        <div class="row" style="padding-top: 20px;">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-8">
+            <div class="row">
+              <div th:each="book : ${favouriteBookList}" class="col-sm-3" style="padding-top: 20px;">
+                <form th:action="@{/book/getBookById}" th:method="get">
+                    <input type="hidden" th:value="${book.key.id}" name="id">
+                    <div class="card" style="width:300px;">
+                        <div style="height: 400px; overflow: hidden;">
+                            <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
+                                style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;"></h4>
+                            <p class="card-text" th:text="${book.key.price}+'đ'" style="color: yellowgreen;"></p>
+                            <div>
+                                <button type="submit"
+                                    style="border: none; background-color: white; font-weight: bolder;display: inline;">Xem thông tin</button>
+                            </div>
+                            <div>
+                                <p class="h5" th:text="${book.value}" style="display: inline;color:#FF9529 ;"></p>
+                                <i class="fa-solid fa-star" style="color: #FF9529;display: inline;font-size: larger;"></i>
+                                <a th:href="@{/book/getBookById}" style="display: inline; padding-right: 0px;float: right;">
+                                    <i class="fa-solid fa-cart-shopping" style="font-size: x-large;"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     <footer th:insert="~{footer :: footer}"></footer>
 </body>
