--- a/BookSaleProject/src/main/resources/templates/footer.html
+++ b/BookSaleProject/src/main/resources/templates/footer.html
@@ -29,7 +29,7 @@
     <body>
 <div th:fragment="footer">
   
-<footer class="bg-gray-900 mt-16 b-0" aria-labelledby="footer-heading" style="padding-bottom: 0px; background-color: black;" th:fragment="footer">
+<footer class="bg-gray-900 mt-16 b-0" aria-labelledby="footer-heading" style="padding-bottom: 0px; background-color: #555555;" th:fragment="footer">
   <h2 id="footer-heading" class="sr-only">Footer</h2>
   <div class="mx-auto max-w-7xl px-6 pb-8 pt-20 sm:pt-24 lg:px-8 lg:pt-32">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
