--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -72,7 +72,7 @@
 
                 <div class="modal" th:id="|newBookModal${status.index}|">
                   <div class="modal-dialog modal-xl modal-dialog modal-dialog-centered">
-                    <div class="modal-content" style="border: solid;">
+                    <div class="modal-content">
                       <div class="row">
                         <div class="col-sm-4">
                           <img th:src="@{'/images/'+${book.key.img}}" ,
@@ -195,7 +195,7 @@
 
                 <div class="modal" th:id="|favouriteBookModal${status.index}|">
                   <div class="modal-dialog modal-xl modal-dialog modal-dialog-centered">
-                    <div class="modal-content" style="border: solid;">
+                    <div class="modal-content">
                       <div class="row">
                         <div class="col-sm-4">
                           <img th:src="@{'/images/'+${book.key.img}}" ,
