--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -1,106 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SignIn&SignUp</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
-  
-  </head>
-  <body>
-    <div class="container">
-      <div class="forms-container">
-        <div class="signin-signup">
-          <form action="" class="sign-in-form">
-            <h2 class="title">Sign In</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
-            </div>
-            <input type="submit" value="Login" class="btn solid" />
 
-            <p class="social-text">Or Sign in with social platforms</p>
-            <div class="social-media">
-              <a href="#" class="social-icon">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-google"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </div>
-          </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="topnav.css">
+  <script src="dungchung.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
+  <script th:src="@{/js/reUse.js}"></script>
+  <title>SignIn&SignUp</title>
+
+</head>
+
+<body>
+  <header th:insert="~{header :: header}"></header>
 
 
-          <form action="" class="sign-up-form">
-            <h2 class="title">Sign Up</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
-            </div>
-            <input type="submit" value="Sign Up" class="btn solid" />
-
-            <p class="social-text">Or Sign up with social platforms</p>
-            <div class="social-media">
-              <a href="#" class="social-icon">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-google"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="panels-container">
-
-        <div class="panel left-panel">
-            <div class="content">
-                <h3>New here?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio minus natus est.</p>
-                <button class="btn transparent" id="sign-up-btn">Sign Up</button>
-            </div>
-            <img src="../Pictures/log.svg" class="image" alt="">
-        </div>
-
-        <div class="panel right-panel">
-            <div class="content">
-                <h3>One of us?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio minus natus est.</p>
-                <button class="btn transparent" id="sign-in-btn">Sign In</button>
-            </div>
-            <img src="../Pictures/register.svg" class="image" alt="">
-        </div>
+  <div class="row">
+    <div class="col-sm-8"></div>
+    <div class="col-sm-4" style="padding-top: 0.5%;">
+      <p style="display: inline;">HotLine:</p>
+      <p style="color: green; display: inline;">0938 424 289</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-9">
+      <button><a href="mainPage.html" style="font-weight: bold;">Website Mua Bán Sách</a></button>/Đăng Nhập
+    </div>
+    <div class="col-2"></div>
+  </div>
+  <div class="row" style="padding-top: 2%;">
+    <div class="col-1"></div>
+    <div class="col-9">
+      <p style="font-size: 150%; display: inline;"><strong>Đăng nhập</strong>/</p>
+      <button><a href="Register.html"><strong style="font-size: 150%; color: aquamarine;">Đăng kí</strong></a></button>
+      <hr>
+    </div>
+    <div class="col-2"></div>
+  </div>
+  <div class="row" style="padding: 2%;">
+    <div class="col-3"></div>
+    <div class="col-6">
+      <div class="container mt-3">
+        <form action="">
+          <div class="form-floating mb-3 mt-3">
+            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="form-floating mt-3 mb-3">
+            <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+            <label for="pwd">Mật Khẩu</label>
+            <button style="padding-top: 2%;"><a href="MissPassword.html" style="font-weight: bold;">Quên mật
+                khẩu?</a></button>
+          </div>
+          <div style="padding-left: 30%;padding-top: 5%;display: inline;">
+            <button type="submit" class="btn btn-primary" style="background-color: aquamarine;"><a href=""><strong
+                  style="color: black;">Đăng Nhập</strong></a></button>
+          </div>
+          <div style="padding-left: 10%;padding-top: 5%;display: inline;">
+            <button class="btn btn-primary" style="width: 15%; background-color: aquamarine;"><a href="Register.html"
+                style="color: black;font-weight: bold ;">Tạo tài khoản</a></button>
+          </div>
+        </form>
       </div>
     </div>
+    <div class="col-3"></div>
+  </div>
 
-    <script src="./app.js"></script>
-  </body>
+  <footer th:insert="~{footer :: footer}"></footer>
+</body>
+
 </html>
